# SistemasOperativos

./: .clang-format  CMakeLists.txt  README.md  log.txt  procesos.txt  simulador
instrucciones/: 1.txt  2.txt  3.txt  4.txt
src/: CargaInstrucciones.cpp  CargaInstrucciones.h  CargaProcesos.cpp  CargaProcesos.h  Logger.cpp  Logger.h  Planificador.cpp  Planificador.h  Proceso.h  main.cpp
